--- a/app/src/main/res/layout/activity_planilla_nomina.xml
+++ b/app/src/main/res/layout/activity_planilla_nomina.xml
@@ -149,7 +149,7 @@
       android:textColor="@color/black"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.697"
+      app:layout_constraintHorizontal_bias="0.84"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.292"
@@ -206,25 +206,25 @@
       android:textStyle="bold"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.537"
+      app:layout_constraintHorizontal_bias="0.517"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.894"
+      app:layout_constraintVertical_bias="0.782"
       tools:ignore="TextSizeCheck" />
 
   <EditText
       android:id="@+id/editTextText5"
-      android:layout_width="110dp"
+      android:layout_width="118.5dp"
       android:layout_height="24dp"
       android:ems="10"
       android:inputType="text"
       android:textColor="@color/black"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.963"
+      app:layout_constraintHorizontal_bias="0.921"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.892"
+      app:layout_constraintVertical_bias="0.782"
       tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
   <TextView
@@ -236,25 +236,25 @@
       android:textStyle="bold"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.481"
+      app:layout_constraintHorizontal_bias="0.567"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.982"
+      app:layout_constraintVertical_bias="0.889"
       tools:ignore="TextSizeCheck" />
 
   <EditText
       android:id="@+id/editTextText6"
-      android:layout_width="110dp"
+      android:layout_width="118.5dp"
       android:layout_height="24dp"
       android:ems="10"
       android:inputType="text"
       android:textColor="@color/black"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.963"
+      app:layout_constraintHorizontal_bias="0.923"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.981"
+      app:layout_constraintVertical_bias="0.891"
       tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
   <TextView
@@ -352,7 +352,7 @@
       app:layout_constraintHorizontal_bias="0.059"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.487" />
+      app:layout_constraintVertical_bias="0.488" />
 
   <EditText
       android:id="@+id/editTextText7"
@@ -433,5 +433,155 @@
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.603"
       tools:ignore="TextSizeCheck" />
+
+  <TextView
+      android:id="@+id/textView23"
+      android:layout_width="143dp"
+      android:layout_height="23dp"
+      android:background="#C8E0F3"
+      android:gravity="center"
+      android:text="@string/label_concepto"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.059"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.642" />
+
+  <TextView
+      android:id="@+id/textView24"
+      android:layout_width="110dp"
+      android:layout_height="23dp"
+      android:background="#C8E0F3"
+      android:text="@string/label_cantidad"
+      android:gravity="center"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.528"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.642" />
+
+  <TextView
+      android:id="@+id/textView25"
+      android:layout_width="118.5dp"
+      android:layout_height="23dp"
+      android:background="#C8E0F3"
+      android:gravity="center"
+      android:text="@string/label_valor"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.921"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.642" />
+
+  <TextView
+      android:id="@+id/textView26"
+      android:layout_width="143dp"
+      android:layout_height="23dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.059"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.677" />
+
+  <TextView
+      android:id="@+id/textView27"
+      android:layout_width="143dp"
+      android:layout_height="23dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.059"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.712" />
+
+  <TextView
+      android:id="@+id/textView28"
+      android:layout_width="143dp"
+      android:layout_height="23dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.059"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.746" />
+
+  <TextView
+      android:id="@+id/textView29"
+      android:layout_width="110dp"
+      android:layout_height="23dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.531"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.677" />
+
+  <TextView
+      android:id="@+id/textView30"
+      android:layout_width="110dp"
+      android:layout_height="23dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.531"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.712" />
+
+  <TextView
+      android:id="@+id/textView31"
+      android:layout_width="110dp"
+      android:layout_height="23dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.531"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.746" />
+
+  <EditText
+      android:id="@+id/editTextText9"
+      android:layout_width="118.5dp"
+      android:layout_height="23dp"
+      android:ems="10"
+      android:inputType="text"
+      android:text="Name"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.921"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.677" />
+
+  <EditText
+      android:id="@+id/editTextText10"
+      android:layout_width="118.5dp"
+      android:layout_height="23dp"
+      android:ems="10"
+      android:inputType="text"
+      android:text="Name"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.921"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.712" />
+
+  <EditText
+      android:id="@+id/editTextText11"
+      android:layout_width="118.5dp"
+      android:layout_height="23dp"
+      android:ems="10"
+      android:inputType="text"
+      android:text="Name"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.921"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintVertical_bias="0.746" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
